# chess

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  conanfile.py  config.json
include/: board.hpp  game_loader.hpp  game_state_handler.hpp  game_writer.hpp  move.hpp  piece.hpp
piece_images/: .gitignore
src/: board.cpp  game_state_handler.cpp  main.cpp
